commiting all changes before the 1.0 release

--- a/src/main/webapp/help-globalConfig.html
+++ b/src/main/webapp/help-globalConfig.html
@@ -1,8 +1,6 @@
 <div>
   <p>
-    This HTML fragment will be injected into the configuration screen
-    when the user clicks the 'help' icon. See global.jelly for how the
-    form decides which page to load.
-    You can have any HTML fragment here.
+    The veracode base URI is the the URI to the Veracode API to upload files for scans and veiw results.
+    It should start with https:// and end with a trailing /
   </p>
 </div>
