making platform a parameter instead of hard coding

--- a/src/main/webapp/help-includes.html
+++ b/src/main/webapp/help-includes.html
@@ -2,6 +2,7 @@
   <p>
     Used to determine what files to send to Veracode for scanning.  This is an ant style includes that runs from the
     context of the jobs workspace root directory.  So something like '*.war' for instance would include all war files
-    in the builds workspace directory for scanning.
+    in the builds workspace directory for scanning and '**/*.war' would include all war files in any directory under the
+    workspace directory.
   </p>
 </div>
